Closed Bug 1213671 Opened 10 years ago Closed 10 years ago

Browser window stops painting when closing a tab or when opening background tabs

Categories

(Core :: Graphics, defect)

44 Branch
x86_64
Windows 10
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
e10s m8+ ---
firefox43 --- unaffected
firefox44 --- fixed

People

(Reporter: rick3162, Assigned: jimm)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

I use inbounds x64 (in win10 x64 build 10240). Since inbounds of 10-08-15 I've noticed (at least once a day) that, although initially closing tabs works ok, after some browsing, randomly (i.e. it may occur shortly after launch or after a lot of time), as I click to close a tab, all Firefox display "hangs" and, after a few seconds it becomes completely white (not even the Minimize|Restore|Close buttons appears). During that time, Task Manager shows that Nightly is working ok (there's no "Not Responding"), there's no relevant entry in about:crashes nor in Event Viewer. And, I only use Greasemonkey and Adblock Plus, but this happened in safe mode too. Also, during that time, moving the mouse around the page (i.e. the white display area), I see that the cursor changes when hovering on the (supposed) positions of links or thumbnails. Note that, when this occurs(to a normal FF window), if, apart from the normal window, there are private windows also open, then the private windows still work ok, i.e. only the 1st window "hangs". Also, when this occurs, when I click to close the "hang" window, it closes normally (there's no "The program is not responding. Close the program?/Wait to respond?") and at FF re-launch, session restore works ok.
Component: General → Graphics
Product: Firefox → Core
Summary: Sometimes, while clicking to close a tab, the whole window "hangs" (though as I hover the cursor around the page, it changes on the (supposed) positions of links or thumbnails → Since inbounds of 10-08-15, frequently, while clicking to close a tab, the whole window "hangs" (though as I hover the cursor around the page, it changes on the (supposed) positions of links or thumbnails
e10s is enabled.
Some additional notes: 1. when this issue occurs, you may still click the hamburger button and the menu opens (though slowly). Also, moving the cursor around the page you'll see that the cursor changes when hovering on the (supposed) positions of links or thumbnails. 2. if you have a download running while this occurs, the download will continue till completion normally. 3. In general, what happens is that, when this issue occurs, i.e. the tab bar strip "hangs", you cannot switch tabs, nor open a new tab (via either the + icon or via Ctrl+T) anymore. If then you minimize and restore the window, ONLY THEN it becomes white, as if it "hanged". (and if you move the mouse around the white area, you'll see that the cursor when over the (supposed) positions of elements).
Thank you for reporting this bug, Kostas. Can you please work to find the precise regression window? Since you're familiar with mozilla-inbound builds you can try testing the builds individually to find where it started. Alternatively you can use mozregression[1] to somewhat automate the process. It should provide you with a pushlog URL which should give us an indication of the offending change. Thank you. 1) http://mozilla.github.io/mozregression/
Flags: needinfo?(rick3162)
Summary: Since inbounds of 10-08-15, frequently, while clicking to close a tab, the whole window "hangs" (though as I hover the cursor around the page, it changes on the (supposed) positions of links or thumbnails → Window hangs when clicking to close a tab though mouse cursor still interacts with page elements on hover
Funny, I just ran into this today myself, albeit when opening a bunch of tabs via Ctrl+Clicking on various links. Same symptoms otherwise.
Status: UNCONFIRMED → NEW
Ever confirmed: true
(In reply to Anthony Hughes, QA Mentor (:ashughes) from comment #3) > Thank you for reporting this bug, Kostas. Can you please work to find the > precise regression window? Since you're familiar with mozilla-inbound builds > you can try testing the builds individually to find where it started. > Alternatively you can use mozregression[1] to somewhat automate the process. > It should provide you with a pushlog URL which should give us an indication > of the offending change. > > Thank you. > > 1) http://mozilla.github.io/mozregression/ It definitely started occurring on one of the inbound builds of 2015-10-15, because I noticed it that day, and I update my m-i installation many times a day. But, this doesn't happen in a standard way (I can't find a standard STR) e.g. yesterday, it happened to me once, and then it didn't happen again, until today So, I tried to find the regression: I checked http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-win64/ and there were 66 builds that day. So, I tried doing a binary search: i.e. trying the 33th build (didn't occur), then the 49th, the 59th, the 62th, the 64 and eventually the 66th, But unfortunately it never occurred during my tests... Anyway, to sum it up, this issue has occurred to me in these cases: in my EVERYDAY profile (it has 2 addons: Greasemonkey 3.5beta4 and Adblock Plus 2.6.11.3990 beta) 4 cases: - while closing a tab, - while opening a tab via ctrl+click - while dragging a tab to change it's position - (at session restore) while selecting to restore a tab (having Options|General|'Don't load tabs until selected' enabled) while in SAFE MODE: The latter of the four is the only case it occurs. in CLEAN profile I can't recreate it.
Flags: needinfo?(rick3162)
FWIW, the same happened just now, after I opened Debugger while viewing a page.
I can reproduce this bug with Flash Player enabled. Steps to reproduce: Open this page multiple times https://dl.dropboxusercontent.com/u/95157096/85f61cf7/usf1wu4ea9.htm. See https://dl.dropboxusercontent.com/u/95157096/85f61cf7/fsdf5qajoo.mp4
Flags: needinfo?(jmathies)
tracking-e10s: --- → ?
Flags: needinfo?(jmathies)
Can you please post your about:support information?
Flags: needinfo?(over68)
(In reply to Jim Mathies [:jimm] from comment #9) > Can you please post your about:support information? Application Basics ------------------ Name: Firefox Version: 44.0a1 Build ID: 20151018030250 Update Channel: nightly User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:44.0) Gecko/20100101 Firefox/44.0 Multiprocess Windows: 1/1 (default: true) Safe Mode: false Extensions ---------- Graphics -------- Adapter Description: AMD Radeon HD 5800 Series Adapter Drivers: aticfx64 aticfx64 aticfx64 aticfx32 aticfx32 aticfx32 atiumd64 atidxx64 atidxx64 atiumdag atidxx32 atidxx32 atiumdva atiumd6a atitmm64 Adapter RAM: 1024 Asynchronous Pan/Zoom: wheel input enabled Device ID: 0x6899 Direct2D Enabled: true DirectWrite Enabled: true (6.2.9200.16571) Driver Date: 7-15-2015 Driver Version: 15.200.1062.0 GPU #2 Active: false GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC) Subsys ID: 0b001002 Supports Hardware H264 Decoding: No; Hardware video decoding disabled or blacklisted Vendor ID: 0x1002 WebGL Renderer: Google Inc. -- ANGLE (AMD Radeon HD 5800 Series Direct3D11 vs_5_0 ps_5_0) windowLayerManagerRemote: true AzureCanvasBackend: direct2d 1.1 AzureContentBackend: direct2d 1.1 AzureFallbackCanvasBackend: cairo AzureSkiaAccelerated: 0 Important Modified Preferences ------------------------------ browser.cache.disk.capacity: 225280 browser.cache.disk.filesystem_reported: 1 browser.cache.disk.smart_size.first_run: false browser.cache.disk.smart_size.use_old_max: false browser.cache.frecency_experiment: 1 browser.download.importedFromSqlite: true browser.places.smartBookmarksVersion: 7 browser.sessionstore.upgradeBackup.latestBuildID: 20151018030250 browser.startup.homepage_override.buildID: 20151018030250 browser.startup.homepage_override.mstone: 44.0a1 dom.apps.reset-permissions: true dom.mozApps.used: true extensions.lastAppVersion: 44.0a1 gfx.direct3d.last_used_feature_level_idx: 0 media.gmp-eme-adobe.abi: x86-msvc-x64 media.gmp-eme-adobe.lastUpdate: 1445255805 media.gmp-eme-adobe.version: 15 media.gmp-gmpopenh264.abi: x86-msvc-x64 media.gmp-gmpopenh264.lastUpdate: 1445255806 media.gmp-gmpopenh264.version: 1.4 media.gmp-manager.buildID: 20151018030250 media.gmp-manager.lastCheck: 1445255794 media.hardware-video-decoding.failed: false network.cookie.prefsMigrated: true network.predictor.cleaned-up: true places.history.expiration.transient_current_max_pages: 12411 plugin.disable_full_page_plugin_for_types: application/pdf plugin.importedState: true privacy.sanitize.migrateClearSavedPwdsOnExit: true security.sandbox.content.tempDirSuffix: {f456bbd6-6ca8-4456-b94c-103a730e1728} Important Locked Preferences ---------------------------- JavaScript ---------- Incremental GC: true Accessibility ------------- Activated: false Prevent Accessibility: 0 Library Versions ---------------- NSPR Expected minimum version: 4.10.10 Version in use: 4.10.10 NSS Expected minimum version: 3.20.1 Basic ECC Version in use: 3.20.1 Basic ECC NSSSMIME Expected minimum version: 3.20.1 Basic ECC Version in use: 3.20.1 Basic ECC NSSSSL Expected minimum version: 3.20.1 Basic ECC Version in use: 3.20.1 Basic ECC NSSUTIL Expected minimum version: 3.20.1 Version in use: 3.20.1 Experimental Features ---------------------
Flags: needinfo?(over68)
Summary: Window hangs when clicking to close a tab though mouse cursor still interacts with page elements on hover → Browser window stops painting when closing a tab or when opening background tabs
Application Basics ------------------ Name: Firefox Version: 44.0a1 Build ID: 20151018162145 User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:44.0) Gecko/20100101 Firefox/44.0 Multiprocess Windows: 1/1 (default: true) Safe Mode: false Extensions ---------- Name: FireFTP Version: 2.0.24.1-signed Enabled: true ID: {a7c6cf7f-112c-4500-a7ea-39801a327e5f} Name: FireSSH Version: 0.94.7.1-signed Enabled: true ID: firessh@nightlight.ws Name: Rotate Image Version: 0.1.3.2.1-signed Enabled: true ID: rotateimage@minisystems.de Name: Save Session Version: 1.3.1.6.1-signed Enabled: true ID: savesession@noasobi.net Name: TabSubmit Basic Version: 0.2.1.1-signed Enabled: true ID: jid1-KR7YJG7ASAuPHQ@jetpack Name: uBlock Origin Version: 1.2.1 Enabled: true ID: uBlock0@raymondhill.net Graphics -------- Adapter Description: NVIDIA Quadro K1000M Adapter Description (GPU #2): Intel(R) HD Graphics 4000 Adapter Drivers: nvd3dumx,nvwgf2umx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um,nvwgf2um Adapter Drivers (GPU #2): igdumdim64 igd10iumd64 igd10iumd64 igdumdim32 igd10iumd32 igd10iumd32 Adapter RAM: 2048 Adapter RAM (GPU #2): Unknown Asynchronous Pan/Zoom: none Device ID: 0x0ffc Device ID (GPU #2): 0x0166 Direct2D Enabled: true DirectWrite Enabled: true (10.0.10240.16430) Driver Date: 8-7-2015 Driver Date (GPU #2): 8-17-2015 Driver Version: 10.18.13.5382 Driver Version (GPU #2): 10.18.10.4276 GPU #2 Active: false GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC) Subsys ID: 21f517aa Subsys ID (GPU #2): 0000000c Supports Hardware H264 Decoding: Yes Vendor ID: 0x10de Vendor ID (GPU #2): 0x8086 WebGL Renderer: Google Inc. -- ANGLE (NVIDIA Quadro K1000M Direct3D11 vs_5_0 ps_5_0) windowLayerManagerRemote: true AzureCanvasBackend: direct2d 1.1 AzureContentBackend: direct2d 1.1 AzureFallbackCanvasBackend: cairo AzureSkiaAccelerated: 0 Important Modified Preferences ------------------------------ accessibility.typeaheadfind.flashBar: 0 browser.cache.disk.capacity: 358400 browser.cache.disk.filesystem_reported: 1 browser.cache.disk.hashstats_reported: 1 browser.cache.disk.smart_size_cached_value: 358400 browser.cache.disk.smart_size.first_run: false browser.cache.disk.smart_size.use_old_max: false browser.cache.frecency_experiment: 2 browser.download.folderList: 0 browser.download.importedFromSqlite: true browser.download.useDownloadDir: false browser.places.smartBookmarksVersion: 7 browser.search.useDBForOrder: true browser.sessionstore.upgradeBackup.latestBuildID: 20151018162145 browser.startup.homepage: about:home browser.startup.homepage_override.buildID: 20151018162145 browser.startup.homepage_override.mstone: 44.0a1 browser.tabs.loadBookmarksInBackground: true browser.tabs.remote.autostart: true browser.tabs.remote.autostart.2: false browser.urlbar.userMadeSearchSuggestionsChoice: true dom.apps.reset-permissions: true dom.ipc.plugins.asyncInit.enabled: true dom.max_script_run_time: 0 dom.mozApps.maxLocalId: 1001 dom.mozApps.used: true extensions.lastAppVersion: 44.0a1 font.internaluseonly.changed: false gfx.crash-guard.d3d11layers.appVersion: 43.0a1 gfx.crash-guard.d3d11layers.deviceID: 0x0166 gfx.crash-guard.d3d11layers.driverVersion: 10.18.10.4252 gfx.crash-guard.d3d11layers.feature-d2d: true gfx.crash-guard.d3d11layers.feature-d3d11: true gfx.crash-guard.glcontext.gfx.driver-init.direct3d11-angle: true gfx.crash-guard.glcontext.gfx.driver-init.webgl-angle: true gfx.crash-guard.glcontext.gfx.driver-init.webgl-angle-force-d3d11: false gfx.crash-guard.glcontext.gfx.driver-init.webgl-angle-force-warp: false gfx.crash-guard.glcontext.gfx.driver-init.webgl-angle-try-d3d11: true gfx.crash-guard.status.d3d11layers: 2 gfx.crash-guard.status.d3d9video: 2 gfx.crash-guard.status.glcontext: 2 gfx.direct3d.last_used_feature_level_idx: 0 gfx.driver-init.appVersion: 43.0a1 gfx.driver-init.deviceID: 0x0166 gfx.driver-init.driverVersion: 10.18.10.4252 gfx.driver-init.feature-d2d: true gfx.driver-init.feature-d3d11: true gfx.driver-init.status: 2 keyword.URL: https://search.yahoo.com/search?fr=greentree_ff1&ei=utf-8&ilc=12&type=926458&p= layers.async-pan-zoom.enabled: false media.gmp-eme-adobe.abi: x86_64-msvc-x64 media.gmp-eme-adobe.lastUpdate: 1445104171 media.gmp-eme-adobe.version: 15 media.gmp-gmpopenh264.lastUpdate: 1440277787 media.gmp-gmpopenh264.version: 1.4 media.gmp-manager.buildID: 20151018162145 media.gmp-manager.lastCheck: 1445204769 media.hardware-video-decoding.failed: false network.cookie.prefsMigrated: true network.http.speculative-parallel-limit: 0 network.predictor.cleaned-up: true network.prefetch-next: false places.database.lastMaintenance: 1444948229 places.history.expiration.transient_current_max_pages: 104858 plugin.disable_full_page_plugin_for_types: application/pdf plugin.importedState: true plugin.state.flash: 1 plugin.state.npctrl: 1 privacy.cpd.formdata: false privacy.cpd.offlineApps: true privacy.donottrackheader.enabled: true privacy.sanitize.migrateClearSavedPwdsOnExit: true privacy.sanitize.migrateFx3Prefs: true privacy.sanitize.timeSpan: 3 security.disable_button.openCertManager: false security.disable_button.openDeviceManager: false security.tls.unrestricted_rc4_fallback: true storage.vacuum.last.index: 1 storage.vacuum.last.places.sqlite: 1444253939 Important Locked Preferences ---------------------------- JavaScript ---------- Incremental GC: true Accessibility ------------- Activated: false Prevent Accessibility: 0 Library Versions ---------------- NSPR Expected minimum version: 4.10.10 Version in use: 4.10.10 NSS Expected minimum version: 3.20.1 Basic ECC Version in use: 3.20.1 Basic ECC NSSSMIME Expected minimum version: 3.20.1 Basic ECC Version in use: 3.20.1 Basic ECC NSSSSL Expected minimum version: 3.20.1 Basic ECC Version in use: 3.20.1 Basic ECC NSSUTIL Expected minimum version: 3.20.1 Version in use: 3.20.1 Experimental Features ---------------------
I'm seeing this too, though it isn't consistently reproducible. The main threads are still pumping messages, so the processes aren't considered to be hung. In fact, if I right-click I can see context menus. It's clearly a painting issue.
Blocks: 1215847
(In reply to Aaron Klotz [:aklotz] (please use needinfo) from comment #12) > I'm seeing this too, though it isn't consistently reproducible. The main > threads are still pumping messages, so the processes aren't considered to be > hung. In fact, if I right-click I can see context menus. It's clearly a > painting issue. I ran into this this weekend, filed bug 1215847. May be the same thing.
Blocks: 1137944
Attached patch fix (obsolete) — Splinter Review
This is caused by a missed fall through case in UpdatePluginWindowState where visibility data isn't available. The changes in AsyncCompositionManager weren't the cause, but I came across that !mLayerManager->GetRoot() early return while debugging. No harm in handling that too, just in case. ResolveRefLayers should always return false for *aResolvePlugins when it doesn't have a real result from UpdatePluginWindowState.
Assignee: nobody → jmathies
Attachment #8677114 - Flags: review?(roc)
No longer blocks: 1215847
Attached patch fixSplinter Review
Attachment #8677114 - Attachment is obsolete: true
Attachment #8677139 - Flags: review?(jmathies)
Attachment #8677139 - Flags: review?(jmathies) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: